--- a/package.json
+++ b/package.json
@@ -9,22 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "lucide-react": "^0.298.0",
     "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3",
-    "@hookform/resolvers": "^3.3.2",
+    "postcss": "8.4.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
-    "lucide-react": "^0.298.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "tailwindcss": "3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.3.3"
   }
 }
